# ray-intro-sfw2024

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile.ray  docker-compose.yml  requirements.txt
examples/inference/: ner-exercise.py
examples/square/: square.py
grafana/: grafana.env
prometheus/: prometheus.yml
